--- a/package.json
+++ b/package.json
@@ -100,14 +100,16 @@
     "handlebars": "^4.0.5",
     "helmet": "^3.4.0",
     "heroku-client": "^3.0.0-beta2",
-    "jquery": "^3.1.0",
+    "jquery": "^3.1.1",
     "gulp-useref": "^1.0.2",
     "gulp-util": "^3.0.8",
     "html-to-react": "^1.2.4",
+    "html2canvas": "^0.5.0-beta4",
     "ics": "^1.5.0",
     "imagemin": "^5.2.2",
     "jsforce": "^1.7.0",
     "jsonwebtoken": "^7.2.1",
+    "jspdf": "^1.3.3",
     "jwk-to-pem": "^1.2.6",
     "lodash": "^4.17.4",
     "marked": "^0.3.5",
