added variables to .env file

--- a/.env
+++ b/.env
@@ -50,4 +50,5 @@ OPENID_SERV=https://federate-qa.xh1.lilly.com
 OPENID_SCOPE=openid auth_web
 OPENID_JWKS_URI=https://federate-qa.xh1.lilly.com/pf/JWKS
 CALLBACK=/auth/ping/callback
-DISABLE_AUTH_LOGS =false
+DISABLE_AUTH_LOGS=false
+PAPERTRAIL_API_TOKEN=nnLYgEXyMqpBLvHO7T
