load course: date bug fixed

--- a/.env
+++ b/.env
@@ -39,7 +39,7 @@ SENDGRID_API_KEY=SG.H8hW5obaR4u7_e2VAPe0gQ.P7Df_Hi5QkrRebD4D2KAsRN2nB8hqW8lAMrBT
 SALES_REPRESENTATIVE_EMAIL=Conde_ana_belen@network.lilly.com
 NOREPLY_EMAIL=notificaciones@auladiabetes.com
 FROM_MAIL=Conde_ana_belen@network.lilly.com
-SENDGRID_PASSWORD=gz7t02jl0621,
+SENDGRID_PASSWORD=gz7t02jl0621
 SENDGRID_USERNAME=app65521928@heroku.com
 OPENID_CLIENT_ID=aW4BCdfWRw9nMHf4uQzWWg4MWgapkm
 OPENID_NONCE=ZGv5E8hOTi
