--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "test": "tests/run-ci",
+    "test": "./codecheck",
     "gulp": "./gulpfile.js",
     "unit-test": "gulp mocha",
     "prestart-parallel": "npm run unit-test",
