Added jvm build pack to app.json

--- a/app.json
+++ b/app.json
@@ -102,6 +102,9 @@
   "buildpacks": [
     {
       "url": "heroku/nodejs"
+    },
+    {
+      "url": "https://codon-buildpacks.s3.amazonaws.com/buildpacks/heroku/jvm-common.tgz"
     }
   ]
 }
