Pull request comments has been addressed - 08-08-2017.
Reviewer name: RashiMathur1
Developer name: Dinesh

--- a/.env-sample
+++ b/.env-sample
@@ -1,15 +1,54 @@
-NODE_ENV=production
-AUTH_REQUIRED=false
-OPENID_RESP_TYPE=id_token
-OPENID_SERV=https://federate-qa.xh1.lilly.com
-OPENID_SCOPE=openid auth_web
-OPENID_JWKS_URI=https://federate-qa.xh1.lilly.com/pf/JWKS
-CALLBACK=/auth/ping/callback
-DISABLE_AUTH_LOGS =false
-
+AUTH_REQUIRED=
+CF_CALLBACK_URL=
+CF_CLIENT_ID=
+CF_CLIENT_SECRET=
+SESSION_SECRET=
+LOG_LEVEL=
 NEW_RELIC_LICENSE_KEY=
 NEW_RELIC_LOG=
-PAPERTRAIL_API_TOKEN=
-OPENID_NONCE=
-OPENID_CLIENT_ID=
+NEW_RELIC_LOG_LEVEL=
+REDIS_URL=
+SF_AUTHORIZE_URL =
+SF_TOKEN_URL =
+GTM_CONTAINER_ID =
+NODE_ENV=
 COOKIE_SECRET=
+LOCAL_DEV=
+EXTERNAL_ACCESS=
+IP_ADDR=
+PG_HOST=
+PG_DATABASE=
+PG_USER=
+PG_PASSWORD=
+PG_SSL=
+PG_MAX_POOL_CLIENTS=
+PG_REMAIN_IDLE=
+JANRAIN_CLIENT_ID=
+JANRAIN_APPLICATION_ID=
+FORGOT_PASSWORD_FLOW_VERSION=
+JANRAIN_CLIENT_SECRET=
+JANRAIN_APP_DOMAIN=
+JANRAIN_FLOW=
+JANRAIN_FLOW_VERSION=
+JANRAIN_LOCALE=
+CONTENTFUL_ACCESS_TOKEN=
+CONTENTFUL_SPACE_ID=
+CONTENTFUL_DOMAIN=
+CONTENFUL_USER=
+CONTENTFUL_PASSWORD=
+SENDGRID_API_KEY=
+SALES_REPRESENTATIVE_EMAIL=
+NOREPLY_EMAIL=
+FROM_MAIL=
+SENDGRID_PASSWORD=
+SENDGRID_USERNAME=
+OPENID_CLIENT_ID=
+OPENID_NONCE=
+OPENID_RESP_TYPE=
+OPENID_SERV=
+OPENID_SCOPE=
+OPENID_JWKS_URI=
+CALLBACK=
+DISABLE_AUTH_LOGS=
+PAPERTRAIL_API_TOKEN=
+HEROKU_DOMAIN=
