--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
-  "name": "cirr-web-accelerator",
+  "name": "AULA Diabetes",
   "version": "2.1.2",
   "private": true,
   "license": "MIT",
   "scripts":{
+    "start": "node ./bin/www",
     "test": "./tests/codecheck gulp mocha && gulp lint",
     "gulp": "./gulpfile.js",
     "unit-test": "gulp mocha",
     "prestart-parallel": "npm run unit-test",
     "start-parallel": "npm-run-all --parallel build start",
     "ci_test": "gulp mocha && gulp lint",
-    "start": "node ./bin/www",
-    "start:dev": "nodemon app.js --ignore 'src/public/js/**/*.js' --ignore 'lib/**/*.js'",
-    "build:dev": "webpack --watch --progress",
-    "build:prod": "node ./node_modules/gulp/bin/gulp.js build && node ./node_modules/webpack/bin/webpack.js -p --progress"
+    "prod_test": "tests/codecheck"
   },
-  "author": "Nick Liffen <liffen_nicholas@lilly.com>",
+  "author": "Indegene",
   "contributors": [
     {
       "name": "Matt Bull",
@@ -28,10 +26,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/EliLillyCo/CIRR_WEB_ACCELERATOR"
+    "url": "https://github.com/EliLillyCo/BUIT_EUCAN_AULA_ES_DIABETES"
   },
   "bugs": {
-    "url": "https://github.com/EliLillyCo/CIRR_WEB_ACCELERATOR/issues"
+    "url": "https://github.com/EliLillyCo/BUIT_EUCAN_AULA_ES_DIABETES/issues"
   },
   "dependencies": {
     "async": "^2.4.0",
