--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "AULA Diabetes",
+  "name": "aula_diabetes",
   "description": "A Node.js web accelerator created by Cirrus, a blueprint for getting development team in Lilly up-and-running.",
   "repository": "https://github.com/EliLillyCo/BUIT_EUCAN_AULA_ES_DIABETES",
   "logo": "https://nodejs.org/static/images/logos/nodejs-new-pantone-black.png",
